# meeting-recorder

./: .gitattributes  .gitignore  LICENSE  README.md  meetingrecorder.spec  pyinstaller_entry.py  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: build-windows.yml  lint.yml
docs/: HOW_TO_USE.md  RATE_LIMIT.md
scripts/: bf_mk2_copy_to_desktop.ps1  bf_mk2_install.ps1  build_windows.ps1  publish.py
src/meetingrecorder/: __init__.py  __main__.py  app.py  audio_capture.py  io_utils.py  transcribe.py  transcript_format.py
tests/: conftest.py  test_audio_capture_loopback.py  test_io_utils.py  test_package.py  test_packaging.py  test_rate_limit_handling.py  test_transcribe_backend.py  test_transcript_format.py
